--- a/src/app/views/settings/users/index/indexUser.component.html
+++ b/src/app/views/settings/users/index/indexUser.component.html
@@ -31,9 +31,9 @@
 						<td>{{ user.attributes.first_name }} {{ user.attributes.last_name }}</td>
 						<td>{{ user.attributes.username }}</td>
 						<td>{{ user.attributes.email }}</td>
-						<td>{{ user.attributes.email_verified_at | date }}</td>
-						<td>{{ user.attributes.created_at | date }}</td>
-						<td>{{ user.attributes.updated_at | date }}</td>
+						<td>{{ user.attributes.email_verified_at | date:'dd/MM/yyyy' }}</td>
+						<td>{{ user.attributes.created_at | date:'dd/MM/yyyy' }}</td>
+						<td>{{ user.attributes.updated_at | date:'dd/MM/yyyy' }}</td>
 						<td>
 							<div class="d-flex flex-row">
 								<a class="btn btn-sm btn-primary me-2" routerLink="/settings/users/edit/{{ user.id }}">{{ 'edit' | translate }} <i class="bi bi-pencil-square"></i></a>
