--- a/src/app/views/services/packages/form/formPackage.component.html
+++ b/src/app/views/services/packages/form/formPackage.component.html
@@ -69,7 +69,7 @@
 			</div>
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-secondary" (click)="submit()">{{cancelText}}</button>
+		<button type="button" class="btn btn-secondary" (click)="cancel()">{{cancelText}}</button>
 		<button type="submit" [disabled]="!formPackage.valid" class="btn btn-primary">{{confirmText}}</button>
 	</div>
 </form>
