feat: Update subscriptions index page button label and icon

--- a/src/app/views/services/subscriptions/index/indexSubscription.component.html
+++ b/src/app/views/services/subscriptions/index/indexSubscription.component.html
@@ -38,8 +38,7 @@
 						<td>{{ subscription.attributes.status | translate }}</td>
 						<td>
 							<div class="d-flex flex-row">
-								<a class="btn btn-sm btn-primary me-2">{{ 'edit' | translate }} <i class="ms-2 bi bi-pencil-square"></i></a>
-								<button class="btn btn-sm btn-danger">{{ 'delete' | translate }}<i class="ms-2 bi bi-trash"></i></button>
+								<a class="btn btn-sm btn-primary me-2">{{ 'show' | translate }} <i class="ms-2 bi bi-eye-fill"></i></a>
 							</div>
 						</td>
 				</tbody>
