--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="app-header">
 	<a class="app-header__logo" routerLink="/">{{ appName }}</a>
 
-	@if(loggedIn){
+	@if(loggedIn && !routesException.exceptionRoute()){
 		<span class="app-sidebar__toggle p-cursor" data-toggle="sidebar" href="#" (click)="toggleMenu()" aria-label="Hide Sidebar"></span>
 	}
 
