--- a/src/assets/css/vali.css
+++ b/src/assets/css/vali.css
@@ -718,7 +718,7 @@ progress {
 .list-unstyled,
 .treeview-menu,
 .app-menu,
-.app-nav {
+.app-nav, .app-nav-start {
 	padding-left: 0;
 	list-style: none;
 }
@@ -15429,6 +15429,16 @@ fieldset:disabled .btn {
 }
 
 .app-nav {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	margin-bottom: 0;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+}
+
+.app-nav-start {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
