--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -1,19 +1,17 @@
 <header class="app-header">
 	<a class="app-header__logo" routerLink="/">{{ appName }}</a>
 
-	@if(loggedIn && !routesException.exceptionRoute()){
+	@if(loggedIn && !exceptionRoute()){
 		<span class="app-sidebar__toggle p-cursor" data-toggle="sidebar" href="#" (click)="toggleMenu()" aria-label="Hide Sidebar"></span>
+	} @else {
+		<ul class="app-nav-start">
+			<li>
+				<a class="app-nav__item text-decoration-none" routerLink="/plans">{{'plans' | translate}}</a>
+			</li>
+		</ul>
 	}
 
 	<ul class="app-nav">
-		<li class="dropdown" ngbDropdown display="dynamic" placement="bottom-end">
-			<a class="app-nav__item" tabindex="0" ngbDropdownToggle id="navbarDropdownLang" role="button"> <i class="bi bi-translate"></i></a>
-			<div ngbDropdownMenu aria-labelledby="navbarDropdownLang" class="dropdown-menu dropdown-menu-right">
-				<a *ngFor="let language of availableLangNavbarArray" ngbDropdownItem href="#" (click)="switchLanguage(language.key, $event)">
-					{{ language.name }}
-				</a>
-			</div>
-		</li>
 
 		@if (loggedIn){
 			<li class="dropdown" ngbDropdown display="dynamic" placement="bottom-end">
@@ -26,12 +24,21 @@
 		}
 
 		@if(!loggedIn){
-			<li class="dropdown">
+			<li class="">
 				<a class="app-nav__item text-decoration-none" routerLink="auth/login">{{'login' | translate}}</a>
 			</li>
-			<li class="dropdown">
+			<li class="">
 				<a class="app-nav__item text-decoration-none" routerLink="auth/register">{{'register' | translate}}</a>
 			</li>
 		}
+
+		<li class="dropdown" ngbDropdown display="dynamic" placement="bottom-end">
+			<a class="app-nav__item" tabindex="0" ngbDropdownToggle id="navbarDropdownLang" role="button"> <i class="bi bi-translate"></i></a>
+			<div ngbDropdownMenu aria-labelledby="navbarDropdownLang" class="dropdown-menu dropdown-menu-right">
+				<a *ngFor="let language of availableLangNavbarArray" ngbDropdownItem href="#" (click)="switchLanguage(language.key, $event)">
+					{{ language.name }}
+				</a>
+			</div>
+		</li>
 	</ul>
 </header>
