--- a/src/app/views/public/services/public-services.component.html
+++ b/src/app/views/public/services/public-services.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <h2>${{pkg.attributes.price}}<small class="text-body-secondary fw-light">/{{pkg.attributes.interval | translate }}</small></h2>
                 <p class="card-text">{{pkg.attributes.description}}</p>
-                <a href="" class="w-100 btn btn-lg btn-outline-primary">{{'subscribe_to' | translate }} {{pkg.attributes.name}}</a>
+                <a routerLink="/plans/{{pkg.id}}" class="w-100 btn btn-lg btn-outline-primary">{{'subscribe_to' | translate }} {{pkg.attributes.name}}</a>
             </div>
         </div>
     </div>
