--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -71,3 +71,37 @@
 	display: inline-block;
 	color: var(--bs-btn-active-color);
 }
+
+.btn-stripe {
+	--bs-btn-color: #fff;
+	--bs-btn-bg: #6772E5;
+	--bs-btn-border-color: #6772E5;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #5f69e1;
+	--bs-btn-hover-border-color: #5f69e1;
+	--bs-btn-focus-shadow-rgb: 49, 132, 253;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #5f69e1;
+	--bs-btn-active-border-color: #5f69e1;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #fff;
+	--bs-btn-disabled-bg: #6772E5;
+	--bs-btn-disabled-border-color: #6772E5;
+}
+
+.btn-serfinsa {
+	--bs-btn-color: #fff;
+	--bs-btn-bg: #ec6c25;
+	--bs-btn-border-color: #ec6c25;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #d15b20;
+	--bs-btn-hover-border-color: #d15b20;
+	--bs-btn-focus-shadow-rgb: 236, 108, 37;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #d15b20;
+	--bs-btn-active-border-color: #d15b20;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #fff;
+	--bs-btn-disabled-bg: #ec6c25;
+	--bs-btn-disabled-border-color: #ec6c25;
+}
