chore: Update PayServiceComponent UI for displaying package details

--- a/src/app/views/public/pay-service/pay-service.component.html
+++ b/src/app/views/public/pay-service/pay-service.component.html
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 
-				<div class="card">
+				<div class="card mb-3">
 					<div class="card-header">
 						<p class="card-title mb-0">Detalles del comprador</p>
 					</div>
@@ -44,6 +44,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="col-md-6">
 				<div class="card mb-3">
 					<div class="card-header">
