--- a/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
+++ b/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
@@ -33,9 +33,9 @@
 								<div ngbDropdown container="body">
 									<button class="btn btn-sm btn-primary" ngbDropdownToggle></button>
 									<div ngbDropdownMenu class="dropdown-menu-end dropdown-menu-lg-start">
-										<button class="dropdown-item">{{ 'downloadInvoice' | translate }}</button>
+										<button class="dropdown-item" (click)="downloadInvoice(subscription.id)"><i class="bi bi-file-arrow-down-fill"></i> {{ 'downloadInvoice' | translate }}</button>
 										<div class="dropdown-divider"></div>
-										<button class="dropdown-item text-white bg-danger">{{ 'cancelSubscription' | translate }}</button>
+										<button class="dropdown-item text-white bg-danger" (click)="cancelSubscription(subscription.id)"><i class="bi bi-exclamation-circle-fill"></i> {{ 'cancelSubscription' | translate }}</button>
 									</div>
 								</div>
 							</td>
