--- a/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
+++ b/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
@@ -18,6 +18,7 @@
 							<th>{{'package_details' | translate}}</th>
 							<th>{{'payment_method' | translate}}</th>
 							<th>{{'payment_transaction_id' | translate}}</th>
+							<th>{{'status' | translate}}</th>
 							<th>{{'actions' | translate}}</th>
 						</tr>
 						</thead>
@@ -29,13 +30,16 @@
 							<td>{{ subscription.attributes.package_details }}</td>
 							<td class="fw-bolder text-uppercase">{{ subscription.attributes.payment_method }}</td>
 							<td>{{ subscription.attributes.payment_transaction_id }}</td>
+							<td>{{subscription.attributes.status | translate}}</td>
 							<td>
 								<div ngbDropdown container="body">
 									<button class="btn btn-sm btn-primary" ngbDropdownToggle></button>
 									<div ngbDropdownMenu class="dropdown-menu-end dropdown-menu-lg-start">
 										<button class="dropdown-item" (click)="downloadInvoice(subscription.id)"><i class="bi bi-file-arrow-down-fill"></i> {{ 'downloadInvoice' | translate }}</button>
-										<div class="dropdown-divider"></div>
-										<button class="dropdown-item text-white bg-danger" (click)="cancelSubscription(subscription.id)"><i class="bi bi-exclamation-circle-fill"></i> {{ 'cancelSubscription' | translate }}</button>
+										@if (subscription.attributes.status === 'approved'){
+											<div class="dropdown-divider"></div>
+											<button class="dropdown-item text-white bg-danger" (click)="cancelSubscription(subscription.id)"><i class="bi bi-exclamation-circle-fill"></i> {{ 'cancelSubscription' | translate }}</button>
+										}
 									</div>
 								</div>
 							</td>
