feat: Agregar soporte para cancelar suscripciones en el diálogo de confirmación

--- a/src/app/views/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/views/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -3,9 +3,17 @@
 	<button type="button" class="btn-close" aria-describedby="modal-title" (click)="cancel()"></button>
 </div>
 <div class="modal-body">
-	<p class="mb-0">{{message}}</p>
+	@if (reason){
+		<div [formGroup]="formModal">
+			<label for="reason" class="form-label">{{this.translate.instant('reasonForCancellation')}}</label>
+			<textarea class="form-control" id="reason" rows="3" formControlName="reasonTextarea"></textarea>
+			<div class="invalid-feedback">{{this.translate.instant('reasonIsRequired')}}</div>
+		</div>
+	} @else {
+		<p>{{message}}</p>
+	}
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-danger" (click)="confirm()">{{confirmText}}</button>
+	<button type="button" class="btn btn-danger" (click)="confirm()" [disabled]="!formModal.valid">{{confirmText}}</button>
 	<button type="button" class="btn btn-secondary" (click)="cancel()">{{cancelText}}</button>
 </div>
