--- a/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
+++ b/src/app/views/admin/account/account-subscriptions/account-subscriptions.component.html
@@ -35,8 +35,12 @@
 								<div ngbDropdown container="body">
 									<button class="btn btn-sm btn-primary" ngbDropdownToggle></button>
 									<div ngbDropdownMenu class="dropdown-menu-end dropdown-menu-lg-start">
-										<button class="dropdown-item" (click)="downloadInvoice(subscription.id)"><i class="bi bi-file-arrow-down-fill"></i> {{ 'downloadInvoice' | translate }}</button>
+										@if (subscription.attributes.status === 'waiting' && subscription.attributes.payment_method === 'paypal'){
+											<button class="dropdown-item"><i class="bi bi-file-arrow-down-fill"></i> {{ 'retryPayment' | translate }}</button>
+										}
+
 										@if (subscription.attributes.status === 'approved'){
+											<button class="dropdown-item" (click)="downloadInvoice(subscription.id)"><i class="bi bi-file-arrow-down-fill"></i> {{ 'downloadInvoice' | translate }}</button>
 											<div class="dropdown-divider"></div>
 											<button class="dropdown-item text-white bg-danger" (click)="cancelSubscription(subscription.id)"><i class="bi bi-exclamation-circle-fill"></i> {{ 'cancelSubscription' | translate }}</button>
 										}
