--- a/src/app/views/public/services/pay-package/pay-package.component.html
+++ b/src/app/views/public/services/pay-package/pay-package.component.html
@@ -53,9 +53,9 @@
 					<div class="card-body">
 						<div class="d-grid gap-2">
 							<a class="btn btn-primary" (click)="storeSubscriptions('paypal')">{{ 'pay_with' | translate }} Paypal</a>
-							<a class="btn btn-stripe" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">{{ 'pay_with' | translate }} Stripe</a>
 
-							<div class="card" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+							<a class="btn btn-stripe" (click)="stripeIsCollapsed = !stripeIsCollapsed" [attr.aria-expanded]="!stripeIsCollapsed" aria-controls="collapseStripe">{{ 'pay_with' | translate }} Stripe</a>
+							<div class="card" id="collapseStripe" [(ngbCollapse)]="stripeIsCollapsed">
 								<div class="card-body">
 									<form (ngSubmit)="stripeSubscribe()" [formGroup]="stripeSubscriptionForm">
 										<input class="form-control mb-3" formControlName="email" placeholder="{{'email' | translate}}" required>
@@ -65,14 +65,101 @@
 								</div>
 							</div>
 
-							<a class="btn btn-serfinsa disabled">{{ 'pay_with' | translate }} Serfinsa</a>
-							<a class="btn btn-dark disabled">{{ 'pay_with' | translate }} N1co</a>
-						</div>
+							<a class="btn btn-primary" (click)="toggleWompi()">{{ 'pay_with' | translate }} Wompi El Salvador</a>
+							<div class="card" id="collapseWompi" [(ngbCollapse)]="wompiIsCollapsed">
+								<div class="card-body">
+									<form (ngSubmit)="wompiPayment()" [formGroup]="wompiSubscriptionForm">
+										<div class="row">
+											<div class="col-md mb-3">
+												<label for="card_number" class="form-label">Numero de tarjeta</label>
+												<input type="text" class="form-control" id="card_number" name="numeroTarjeta" formControlName="card_number" creditCardNumberMaskDirective>
+											</div>
+										</div>
 
+										<div class="row">
+											<div class="col-md-5 mb-3">
+												<label for="expiration_month" class="form-label">Mes de vencimiento</label>
+												<select class="form-select" id="expiration_month" formControlName="expiration_month">
+													<option *ngFor="let month of months" [value]="month">{{ month < 10 ? '0' + month : month }}</option>
+												</select>
+											</div>
+
+											<div class="col-md-5 mb-3">
+												<label for="expiration_year" class="form-label">Año de vencimiento</label>
+												<select class="form-select" id="expiration_year" formControlName="expiration_year">
+													<option *ngFor="let year of years" [value]="year">{{ year }}</option>
+												</select>
+											</div>
+
+											<div class="col-md-2 mb-3">
+												<label for="cvv" class="form-label">CVV</label>
+												<input type="text" class="form-control" id="cvv" formControlName="cvv" creditCardCvvMask>
+											</div>
+										</div>
+
+										<hr>
+
+										<div class="row">
+											<div class="col-md-6 mb-3">
+												<label for="first_name" class="form-label">{{'firstName' | translate}}</label>
+												<input type="text" class="form-control" id="first_name" formControlName="first_name">
+											</div>
+											<div class="col-md-6 mb-3">
+												<label for="last_name" class="form-label">{{'lastName' | translate}}</label>
+												<input type="text" class="form-control" id="last_name" formControlName="last_name">
+											</div>
+										</div>
+										<div class="mb-3">
+											<label for="email" class="form-label">{{'email' | translate}}</label>
+											<input type="email" class="form-control" id="email" formControlName="email">
+										</div>
+
+										<div class="row">
+											<div class="col-md-6 mb-3">
+												<label for="country" class="form-label">{{'country' | translate}}</label>
+												<select class="form-select" id="country" formControlName="country" (change)="onCountryChange($event)">
+													<option *ngFor="let country of countries" [value]="country.id">{{ country.nombre }}</option>
+												</select>
+											</div>
+											<div class="col-md-6 mb-3">
+												<label for="state" class="form-label">{{'state' | translate}}</label>
+												<select class="form-select" id="state" formControlName="state">
+													<option *ngFor="let territory of territories" [value]="territory.id">{{ territory.nombre }}</option>
+												</select>
+											</div>
+										</div>
+
+										<div class="row">
+											<div class="col-md-6 mb-3">
+												<label for="city" class="form-label">{{'city' | translate}}</label>
+												<input type="text" class="form-control" id="city" formControlName="city">
+											</div>
+											<div class="col-md-6 mb-3">
+												<label for="address" class="form-label">{{'address' | translate}}</label>
+												<input type="text" class="form-control" id="address" formControlName="address">
+											</div>
+										</div>
+
+										<div class="row">
+											<div class="col-md-6 mb-3">
+												<label for="postal_code" class="form-label">{{'postalCode' | translate}}</label>
+												<input type="text" class="form-control" id="postal_code" formControlName="postal_code">
+											</div>
+											<div class="col-md-6 mb-3">
+												<label for="phone" class="form-label">{{'phone' | translate}}</label>
+												<input type="text" class="form-control" id="phone" formControlName="phone">
+											</div>
+										</div>
+
+										<button class="btn btn-primary float-end" type="submit" [disabled]="!wompiSubscriptionForm.valid">{{'processSubscription' | translate}}</button>
+
+									</form>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 }
