--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -13,9 +13,14 @@
                 <i class="app-menu__icon bi bi-speedometer"></i><span class="app-menu__label">{{'home' | translate }}</span>
             </a>
         </li>
+		<li>
+			<a class="app-menu__item" routerLink="/services/invoices" routerLinkActive="active">
+				<i class="app-menu__icon bi bi-receipt"></i><span class="app-menu__label">{{'invoices' | translate }}</span>
+			</a>
+		</li>
 		<li class="treeview" (click)="toggleTreeView($event)">
 			<a class="app-menu__item" href="#" data-toggle="treeview">
-				<i class="app-menu__icon bi bi-receipt"></i>
+				<i class="app-menu__icon bi bi-calendar-event"></i>
 				<span class="app-menu__label">{{'services' | translate}}</span>
 				<i class="treeview-indicator bi bi-chevron-right"></i>
 			</a>
