--- a/src/app/views/admin/services/invoices/create/createInvoice.component.html
+++ b/src/app/views/admin/services/invoices/create/createInvoice.component.html
@@ -1,6 +1,9 @@
-<form>
+<form [formGroup]="invoiceForm">
 	<div class="mb-3 bg-body rounded p-2 border">
-		<h4 class="mx-2">{{'new' | translate}} {{'invoice' | translate}}</h4>
+		<div class="d-flex justify-content-between align-items-center">
+			<h4 class="mx-2">{{'new' | translate}} {{'invoice' | translate}}</h4>
+			<button type="submit" class="btn btn-primary" (click)="createInvoice()">{{'create' | translate}}</button>
+		</div>
 	</div>
 
 	<div class="card mb-3">
@@ -8,10 +11,19 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="form-group">
-						<label for="client" class="form-label">{{'client' | translate}}</label>
-						<select class="form-select" id="client" name="client" (click)="getUsers()" required>
+						<label class="form-label">{{'client' | translate}}</label>
+						<!--<select class="form-select" id="client" name="client" (click)="getUsers()" required>
 							<option value="">{{'select' | translate}} {{'client' | translate}}</option>
-						</select>
+						</select>-->
+						<ng-select [items]="users"
+						           bindLabel="first_name"
+						           bindValue="id"
+						           placeholder="{{'select' | translate}} {{'client' | translate}}"
+						           formControlName="user_id"
+						           (open)="getUsers()"
+						           (search)="searchUsers($event.term)"
+						           [searchable]="true">
+						</ng-select>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -49,11 +61,11 @@
 
 	<div class="card">
 		<div class="card-header">
-			<span class="btn btn-primary" (click)="addItem()">{{'add' | translate}}</span>
+			<span class="btn btn-secondary" (click)="addItem()">{{'add' | translate}}</span>
 		</div>
 		<div class="card-body">
 			<div *ngFor="let item of items; let i = index">
-				<app-item-form (quantityChange)="updateTotalQuantity($event, i)"></app-item-form>
+				<app-item-form (quantityChange)="updateTotalQuantity($event, i)" (remove)="removeItem(i)" [index]="i"></app-item-form>
 			</div>
 		</div>
 		<div class="card-footer">
