--- a/src/app/views/admin/services/invoices/item/item-form.component.html
+++ b/src/app/views/admin/services/invoices/item/item-form.component.html
@@ -2,29 +2,40 @@
 	<div class="col-md-3">
 		<div class="form-group">
 			<label class="form-label">{{'product' | translate}}</label>
-			<select class="form-select" name="product" required>
-				<option value="">{{'select' | translate}} {{'product' | translate}}</option>
-			</select>
+			<ng-select
+				[items]="packages"
+				bindLabel="attributes.name"
+				bindValue="id"
+				placeholder="{{'select' | translate}} {{'product' | translate}}"
+				(open)="getPackages()"
+				(search)="searchPackages($event.term)"
+				(change)="onPackageSelect($event)"
+				[searchable]="true"
+			></ng-select>
 		</div>
 	</div>
 	<div class="col-md-3">
 		<div class="form-group">
 			<label class="form-label">{{'interval' | translate}}</label>
-			<select class="form-select" name="interval" required>
-				<option value="">{{'select' | translate}} {{'interval' | translate}}</option>
-			</select>
+			<input type="text" class="form-control" [value]="selectedPackage.attributes.interval" readonly>
 		</div>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<div class="form-group">
 			<label class="form-label">{{'description' | translate}}</label>
-			<input type="text" class="form-control" name="description" required>
+			<input type="text" class="form-control" [value]="selectedPackage.attributes.description" readonly>
 		</div>
 	</div>
-	<div class="col-md-1">
+	<div class="col">
 		<div class="form-group">
 			<label class="form-label">{{'quantity' | translate}}</label>
-			<input type="number" class="form-control" name="quantity" [(ngModel)]="quantity" (ngModelChange)="onQuantityChange()" required>
+			<input type="number" class="form-control" name="quantity" [(ngModel)]="selectedPackage.attributes.interval_count" (ngModelChange)="onQuantityChange()" required>
+		</div>
+	</div>
+	<div class="col">
+		<div class="form-group">
+			<label class="form-label">{{'price' | translate}}</label>
+			<input type="number" class="form-control" name="price" [(ngModel)]="selectedPackage.attributes.price" (ngModelChange)="onQuantityChange()" required>
 		</div>
 	</div>
 	<div class="col-md d-flex align-items-end justify-content-end">
